# wickra-xray

./: .gitattributes  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  clippy.toml  deny.toml  lychee.toml  osv-scanner.toml  repo-metadata.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/actions/setup-rust/: action.yml
.github/requirements/: ci-dev.in  ci-dev.txt
.github/scripts/: check-cbindgen.sh  sync-metadata.py
.github/workflows/: bench.yml  ci.yml  codeql.yml  links.yml  release.yml  scorecard.yml  sync-metadata.yml  web-deploy.yml  zizmor.yml
bindings/c/: Cargo.toml  README.md  cbindgen.toml
bindings/c/include/: wickra_xray.h
bindings/c/src/: lib.rs
bindings/csharp/WickraXray/: DllResolver.cs  Native.cs  README.md  WickraXray.csproj  Xray.cs
bindings/csharp/WickraXray.Tests/: GoldenTests.cs  WickraXray.Tests.csproj  XrayTests.cs
bindings/go/: README.md  go.mod  golden_test.go  wickra.go  wickra_test.go
bindings/java/: README.md  pom.xml
bindings/java/src/main/java/org/wickra/xray/: Native.java  Xray.java
bindings/java/src/test/java/org/wickra/xray/: GoldenTest.java  XrayTest.java
bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/node/__tests__/: completeness.test.js  golden.test.js  xray.test.js
bindings/node/npm/darwin-arm64/: package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-arm64-gnu/: package.json
bindings/node/npm/linux-x64-gnu/: package.json
bindings/node/npm/win32-arm64-msvc/: package.json
bindings/node/npm/win32-x64-msvc/: package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/wickra_xray/: __init__.py  __init__.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test_completeness.py  test_golden.py  test_smoke.py
bindings/r/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  README.md
bindings/r/R/: xray.R
bindings/r/src/: Makevars  Makevars.win  wickra_xray.c
bindings/r/tests/: run_tests.R
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/src/: lib.rs
crates/xray-bench/: Cargo.toml
crates/xray-bench/benches/: xray.rs
crates/xray-cli/: Cargo.toml
crates/xray-cli/src/: args.rs  main.rs  run.rs
crates/xray-cli/tests/: cli.rs
crates/xray-core/: Cargo.toml
crates/xray-core/src/: book.rs  config.rs  dataset.rs  error.rs  frame.rs  indicator_set.rs  lib.rs  spec.rs  types.rs  xray.rs
crates/xray-core/src/panels/: book_heatmap.rs  footprint.rs  funding_oi_divergence.rs  liquidation_map.rs  mod.rs
crates/xray-core/tests/: conformance.rs  frame_at_eq_frame.rs  golden.rs  proptest_invariants.rs
docs/: ARCHITECTURE.md  Cookbook.md  DATASETS.md  PANELS.md  RENDERING.md  STREAMING.md
examples/: README.md
examples/c/: CMakeLists.txt  frame.c  frame.cpp
examples/csharp/Frame/: Frame.csproj  Program.cs
examples/go/: frame.go  go.mod
examples/java/: Frame.java
examples/node/: frame.js  package.json
examples/python/: frame.py
examples/r/: frame.R
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: book_fold.rs  build_frame.rs  dataset_parse.rs  spec_parse.rs
golden/: README.md  data.json
golden/expected/: book_heatmap.json  footprint.json  funding_oi_divergence.json  liquidation_map.json  multi_panel.json
golden/specs/: book_heatmap.json  footprint.json  funding_oi_divergence.json  liquidation_map.json  multi_panel.json
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.vue  main.ts  style.css
web/src/components/: PanelGrid.vue  Scrubber.vue
web/src/lib/: dataset.ts  xray.ts
web/src/render/: footprint.ts  funding_oi_divergence.ts  heatmap.ts  liquidation_map.ts
