[package]
name = "wickra-xray-c"
description = "C ABI (cdylib + staticlib) for wickra-xray — the hub every C-capable language (C, C++, C#, Go, Java, R) links against."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
name = "wickra_xray"
crate-type = ["cdylib", "staticlib"]

# The C ABI inherently needs `unsafe` (raw pointers across the FFI boundary); the
# workspace forbids it everywhere else, so this crate re-allows it locally. The
# clippy set mirrors the workspace with the usual FFI-cast exemptions.
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
similar_names = "allow"

[dependencies]
xray-core = { workspace = true }
