[package]
name = "wickra-xray-node"
description = "Node.js bindings for wickra-xray: the data-driven market-microstructure frame core."
version.workspace = true
authors.workspace = true
edition.workspace = true
# napi-build requires Rust >= 1.88 (newer than the workspace 1.86 minimum).
rust-version = "1.88"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

# Mirrors [workspace.lints] clippy set. napi-derive emits its own guarded unsafe;
# the crate re-allows unsafe locally (the workspace forbids it everywhere else).
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
similar_names = "allow"

[dependencies]
xray-core = { workspace = true }
napi = { version = "3.9", features = ["napi8"] }
napi-derive = "3.5"

[build-dependencies]
napi-build = "2"
