[package]
name = "wickra-xray-python"
description = "Python bindings for wickra-xray: the data-driven market-microstructure frame core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
name = "_wickra_xray"
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
xray-core = { workspace = true }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
