[package]
name = "xray-bench"
description = "Criterion benchmarks for the Wickra X-Ray core: build_frame scaling by event count and panel count, parallel vs sequential."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[features]
# Toggle the core's parallel fold so `cargo bench` (default) measures the rayon
# path and `cargo bench --no-default-features` measures the sequential one.
default = ["parallel"]
parallel = ["xray-core/parallel"]

[dependencies]
xray-core = { path = "../xray-core", version = "0.1.0", default-features = false }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "xray"
harness = false
