[package]
name = "wickra-xray-example"
description = "A runnable Rust example for the Wickra X-Ray core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "frame"
path = "src/main.rs"

[dependencies]
xray-core = { workspace = true }
serde_json = { workspace = true }
